@@ -133,3 +133,6 @@ S3method("print","String")
 S3method("length","String")
 S3method("[","String")
 S3method("[<-","String")
+
+## some "apps"
+export("gw_package", "gw_browseEnv")
