@@ -1,0 +1,6 @@
+\name{gw_browseEnv}
+\alias{gw_browseEnv}
+\title{A simple workspace browser...}
+\description{A simple workspace browser}
+\details{Available for local use}
+\value{Creates a web page for browsing objects in the workspace}
