@@ -1,0 +1,6 @@
+\name{gw_package}
+\alias{gw_package}
+\title{a package browser/installer...}
+\description{a package browser/installer}
+\details{Available for local installs only}
+\value{makes a web page for managing installation/loading of packages}
