@@ -1,3 +1,10 @@
+2010-12-10  john verzani  <verzani@john-verzanis-macbook-pro.local>
+
+	* R/gnotebook.R (widget$add): put x.hidden attribute here, not elsewhere.
+
+	* R/ggroup.R (EXTGroup$ExtCfgOptions): put in new arguments for
+	layout, seem to work
+
 2010-12-08  john verzani  <verzani@john-verzanis-macbook-pro.local>
 
 	* R/aaa.R (EXTWidget$writeConstructor): changed x.hidden behaviour
